kubernetes/ss4-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  ports:
  - port: 3306
  selector:
    app: mysqldb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - image: mysql:8
        name: mysqldb
        ports:
        - containerPort: 3306
          name: mysqldb
        volumeMounts:
        - name: ss4-db-persistent-storage
          mountPath: /var/lib/mysql
        - name: config-volume
          mountPath: /docker-entrypoint-initdb.d/dump.sql
          subPath: dump.sql  

      volumes:
      - name: ss4-db-persistent-storage
        persistentVolumeClaim:
          claimName: ss4-db-claim      
      - name: config-volume
        configMap:
          name: ss4-config
