kubernetes/ss6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ss6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ss6
  template:
    metadata:
      labels:
        app: ss6
    spec:
      containers:
      - name: ss6
        image: clatange/aos:latest
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ss6
spec:
  selector:
    app: ss6
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
