kubernetes/ingress-ss4.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.47.0/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ss4
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /AOS4/$1
spec:
  rules:
  - http:
      paths:
        - path: /api/v1/(notificacion.*)
          pathType: Prefix
          backend:
            service:
              name: ss4
              port: 
                number: 8080
