kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /api/v1/(clientes.*)
          pathType: Prefix
          backend:
            service:
              name: ss1
              port: 
                number: 8080    
        - path: /(api/v1/vehiculo.*)
          pathType: Prefix
          backend:
            service:
              name: ss2
              port: 
                number: 8080            
        - path: /api/v1/(jobs.*)
          pathType: Prefix
          backend:
            service:
              name: ss3
              port: 
                number: 8080
        - path: /(api/v1/factura.*)
          pathType: Prefix
          backend:
            service:
              name: ss5
              port: 
                number: 8080
        - path: /(api/v1/recambios.*)
          pathType: Prefix
          backend:
            service:
              name: ss6
              port: 
                number: 8080
